Add authentication, authorization, and MongoDB integration
Introduces JWT-based authentication and authorization using Spring Security, with endpoints for professor registration and login. Adds controllers, services, repositories, and models for managing 'Aluno' and 'Professor' entities, and configures MongoDB as the data store. Includes Docker Compose for MongoDB setup and updates application properties for database and JWT key configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=AT
+spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/gestao_alunos_db?authSource=admin
+
+jwt.private.key=classpath:app.key
+jwt.public.key=classpath:app.pub
